unpackaged/main/default/objects/Titulacion__c/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Vivienda__c</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>