unpackaged/main/default/objects/Titulacion__c/fields/Vivienda_cobrada__c.field-meta.xml
<CustomField>
    <fullName>Vivienda_cobrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vivienda cobrada</label>
    <type>Checkbox</type>
</CustomField>