unpackaged/main/default/objects/Titulacion__c/fields/Vivienda_Formula__c.field-meta.xml
<CustomField>
    <fullName>Vivienda_Formula__c</fullName>
    <formula>Vivienda__r.Nombre_Trunc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vivienda</label>
    <type>Text</type>
</CustomField>