unpackaged/main/default/objects/Titulacion__c/fields/Vivienda_Hipoteca_con_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Vivienda_Hipoteca_con_Servicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vivienda Hipoteca con Servicio</label>
    <type>Checkbox</type>
</CustomField>