unpackaged/main/default/objects/Titulacion__c/fields/Ya_tiene_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Ya_tiene_Cobranza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ya tiene Cobranza?</label>
    <type>Checkbox</type>
</CustomField>