unpackaged/main/default/objects/Titulacion__c/validationRules/Aviso_Retencion_Estado_Cancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>Aviso_Retencion_Estado_Cancelado</fullName>
    <active>true</active>
    <description>Este campo no se puede modificar en el estado &quot;Cancelado&quot;</description>
    <errorConditionFormula>AND(ISCHANGED(  Aviso_de_Retencion__c  ), ISPICKVAL( Estatus_Proceso__c , &#39;Cancelado&#39;))</errorConditionFormula>
    <errorDisplayField>Aviso_de_Retencion__c</errorDisplayField>
    <errorMessage>Este campo no se puede modificar en el estado &quot;Cancelado&quot;</errorMessage>
</ValidationRule>