unpackaged/main/default/objects/Titulacion__c/validationRules/Codigo_postal_fiscal_lock_cancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_postal_fiscal_lock_cancelado</fullName>
    <active>true</active>
    <description>No se puede editar el campo si el status es cancelado</description>
    <errorConditionFormula>AND(ISCHANGED(  Codigo_Postal_Fiscal__c ),  ISPICKVAL( Estatus_Proceso__c , &#39;Cancelado&#39;))</errorConditionFormula>
    <errorDisplayField>Codigo_Postal_Fiscal__c</errorDisplayField>
    <errorMessage>Este campo no se puede modificar cuando el estatus es &#39;Cancelado&#39;</errorMessage>
</ValidationRule>