unpackaged/main/default/objects/Titulacion__c/validationRules/Codigo_Postal_Fiscal_Solo_Numeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_Postal_Fiscal_Solo_Numeros</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISBLANK( Codigo_Postal_Fiscal__c ),
NOT(REGEX(  Codigo_Postal_Fiscal__c ,&quot;^[a-z A-Z]*$&quot;)), 
LEN( Codigo_Postal_Fiscal__c ) &lt; 4 , LEN(  Codigo_Postal_Fiscal__c ) &gt; 10 ))</errorConditionFormula>
    <errorDisplayField>Codigo_Postal_Fiscal__c</errorDisplayField>
    <errorMessage>Ingresa unicamente numeros para el codigo postal</errorMessage>
</ValidationRule>