unpackaged/main/default/objects/Titulacion__c/validationRules/Domicilio_Fical_Lock_Cancelacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicilio_Fical_Lock_Cancelacion</fullName>
    <active>true</active>
    <description>El campo Domicilio fiscal se bloquea cuando el status es cancelado</description>
    <errorConditionFormula>AND(ISCHANGED( Domicilio_Fiscal__c ),  ISPICKVAL( Estatus_Proceso__c , &#39;Cancelado&#39;))</errorConditionFormula>
    <errorDisplayField>Domicilio_Fiscal__c</errorDisplayField>
    <errorMessage>Este campo no se puede modificar cuando el estatus es &#39;Cancelado&#39;</errorMessage>
</ValidationRule>