unpackaged/main/default/objects/Titulacion__c/validationRules/Fecha_de_autorizacion_Formalizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_autorizacion_Formalizado</fullName>
    <active>true</active>
    <description>Solo se puede modificar este campo en el estado &quot;Formalizado&quot;</description>
    <errorConditionFormula>AND(isChanged(  Fecha_de_Autorizacion__c ), NOT(ISPICKVAL(Estatus_Proceso__c , &#39;Formalizado&#39;)))</errorConditionFormula>
    <errorDisplayField>Fecha_de_Autorizacion__c</errorDisplayField>
    <errorMessage>Solo se puede modificar este campo en el estado &quot;Formalizado&quot;</errorMessage>
</ValidationRule>