unpackaged/main/default/objects/Titulacion__c/validationRules/Fecha_de_Avaluo_disponible_en_Formalizad.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_Avaluo_disponible_en_Formalizad</fullName>
    <active>true</active>
    <description>Este campo esta disponible solo en estado &quot;Formalizado&quot;</description>
    <errorConditionFormula>AND(isChanged(  Fecha_del_Avaluo__c ), NOT(ISPICKVAL(Estatus_Proceso__c , &#39;Formalizado&#39;)))</errorConditionFormula>
    <errorDisplayField>Fecha_del_Avaluo__c</errorDisplayField>
    <errorMessage>Este campo esta disponible solo en estado &quot;Formalizado&quot;</errorMessage>
</ValidationRule>