unpackaged/main/default/objects/Titulacion__c/validationRules/Financiera_solo_dispobible_en.validationRule-meta.xml
<ValidationRule>
    <fullName>Financiera_solo_dispobible_en</fullName>
    <active>true</active>
    <description>No se puede modificar la financiera en este subestatus</description>
    <errorConditionFormula>AND(ISCHANGED(  Financiera_2__c ), OR(ISPICKVAL( Sub_Estatus_del_Proceso__c , &#39;Por aprobar&#39;),
	ISPICKVAL( Sub_Estatus_del_Proceso__c , &#39;Entregado&#39;),
	ISPICKVAL( Sub_Estatus_del_Proceso__c , &#39;Cancelado&#39;)))</errorConditionFormula>
    <errorDisplayField>Financiera_2__c</errorDisplayField>
    <errorMessage>No se puede modificar la financiera en este subestatus</errorMessage>
</ValidationRule>