unpackaged/main/default/objects/Titulacion__c/validationRules/Solo_editable_en_formalizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_editable_en_formalizado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(isChanged( Confirmacion_de_Recepcion_del_Expediente__c ), NOT(ISPICKVAL(Estatus_Proceso__c , &#39;Formalizado&#39;)))</errorConditionFormula>
    <errorDisplayField>Confirmacion_de_Recepcion_del_Expediente__c</errorDisplayField>
    <errorMessage>Solo se puede editar en estatus formalizado</errorMessage>
</ValidationRule>