unpackaged/main/default/objects/Titulacion__c/validationRules/Valida_solo_numeros_numero_credito.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_solo_numeros_numero_credito</fullName>
    <active>true</active>
    <description>Solo permite numeros en un campo de texto &quot;Numero de credito&quot;</description>
    <errorConditionFormula>NOT(REGEX(Numero_de_Credito__c  ,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Numero_de_Credito__c</errorDisplayField>
    <errorMessage>El numero de crédito solo debe de contener numeros, no acepta letras ni caracteres especiales.</errorMessage>
</ValidationRule>