unpackaged/main/default/objects/Titulacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proceso_de_Venta__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fecha_Reserva__c</columns>
    <columns>Fecha_Formalizacion__c</columns>
    <columns>Fecha_Entrega__c</columns>
    <columns>Estatus_del_Proceso_de_Venta__c</columns>
    <columns>Sub_Estatus_del_Proceso__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Numero_Interno__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Procesos de Titulación</label>
</ListView>