unpackaged/main/default/objects/Titulacion__c/listViews/Director_Comercial_Titulacion.listView-meta.xml
<ListView>
    <fullName>Director_Comercial_Titulacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director Comercial</label>
    <queue>Director_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>