unpackaged/main/default/objects/Titulacion__c/listViews/Titulaciones_en_firma.listView-meta.xml
<ListView>
    <fullName>Titulaciones_en_firma</fullName>
    <columns>NAME</columns>
    <columns>Sub_Estatus_del_Proceso__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fecha_Formalizacion__c</columns>
    <columns>Numero_de_Escritura__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Notaria__c</columns>
    <columns>Valor_de_Operacion__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Estatus_del_Proceso__c</field>
        <operation>equals</operation>
        <value>En Firmas</value>
    </filters>
    <label>Titulaciones en firma</label>
</ListView>