unpackaged/main/default/objects/Titulacion__c/listViews/Todos_las_Titulaciones.listView-meta.xml
<ListView>
    <fullName>Todos_las_Titulaciones</fullName>
    <columns>NAME</columns>
    <columns>Sub_Estatus_del_Proceso__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fideicomiso__c</columns>
    <columns>Fecha_Formalizacion__c</columns>
    <columns>Numero_de_Escritura__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Vivienda__c</columns>
    <columns>Unidad_Privativa__c</columns>
    <columns>Valor_de_Operacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los procesos de Titulación</label>
</ListView>